--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 /Dungeon.class
 /Hello.class
 /HelloWorld.class
+/Battle.class
+/GitTester.class
+/Inv.class
+/Monster.class
+/charac.class
+/Game.class
+/Item.class
